openstack-dashboard/media/dashboard/css/style.css
/* ... */
.dash_block form select {
	width: 100%;
	margin-bottom: 15px;
}

.search input[type="text"]:focus, .modal_window input:focus, .modal_window textarea:focus, .dash_block form input[type="text"]:focus, .dash_block form input[type="password"]:focus {
	outline: none;
	box-shadow:0 0 3px #41bad4;
    -moz-box-shadow:0 0 3px #41bad4;
    -webkit-box-shadow:0 0 3px #41bad4;
    -webkit-transition-property: -webkit-box-shadow, border-color;
    -webkit-transition-duration: 0.2s;
    border-color: #b7b7b7;


}
#sidebar h3 {
	font-weight: normal;
	font-size: 18px;
	color: #6a6a6a;
	margin-top: 15px;
	margin-bottom: 15px;
}

#sidebar .sub_nav {
	width: 208px;
}

#sidebar .sub_nav a {
	color: #999;
	padding: 10px;
	float: left;
	width: 188px;
}

#sidebar .sub_nav a.active {
	background: #fff;
	border: 1px solid #e1e1e1;
}


#page_header {
	float: left;
	background-color: #f2f2f2;
	margin-top: -15px;
	margin-left: -11px;
	padding-left: 20px;
	padding-top: 20px;
	width: 726px;
	-webkit-border-top-right-radius: 10px;
	-moz-border-radius-topright: 10px;
	border-top-right-radius:10px;
	border-bottom: 1px solid #e5e5e5;
	margin-bottom: 25px;
	padding-bottom: 20px;
}

#page_header h2, .modal_window h3 {
	font-weight: normal;
	font-size: 30px;
	color: #a3a3a3;
	float: left;
}

#page_header h2 span, .modal_window h3 span {
	font-weight: normal;
	font-size: 30px;
	color: #6a6a6a;
}

p.desc:first-letter {
	margin-left: -13px;
}
#page_header p.desc {
	float: left;
	font-size: 12px;
	margin-left: 25px;
	width: 400px;
	line-height: 16px;
	margin-top: 5px;
}

#more {
	float: left;
	margin-left: 16px;
	width: 723px;
	margin-top: 25px;
}

#content a {
	color: #3fb9d3;
}

#content a:hover {
	text-decoration: underline;
}

a.more_link {
	float: right;
	font-size: 11px;
}

#page_header .more_link {
	margin-top: 10px;
	margin-right: 20px;
}

#more .block {
	width: 200px;
	float: left;
	color: #b6b6b6;
	font-size: 14px;
	line-height: 20px;
	margin-right: 20px;
	border-right: 1px solid #ccc;
	padding-right: 20px;
}

#more .block h3 {
	font-size: 18px;
	color: #6a6a6a;
	font-weight: normal;
	margin-bottom: 10px;
}


.fancy_btn {
	background: url(../images/button/btn_left.png) top left no-repeat ;
	display: block;
	float: left;
	height: 33px;
	text-decoration: none !important;
	text-shadow: #989898 1px 1px 1px;
	font-family: "helvetica";
	font-weight: bold;
	margin-top: 15px;
	margin-bottom: 25px;
}


.fancy_btn:hover{ background-position: 0 -34px; }
.fancy_btn:hover span { background-position: right -34px; }
.fancy_btn:active{ background-position: 0 -68px; }
.fancy_btn:active span { background-position: right -68px; }

.fancy_btn span {
	background: url(../images/button/btn_right.png) top right;
	padding-left: 19px;
	margin-left: 16px;
	display: block;
	height: 27px;
	padding-top: 6px;
	color: #fff;
	padding-right: 20px;
	float: left;
}

.fancy_btn img {
	float: left;
	z-index: 100;
	position: relative;
	margin-top: 8px;
	margin-left: 10px;
	margin-bottom: -27px;
}

.last {
	border-right: 0 !important;
}


.main_content {
	float: left;
	margin-left: 8px;
}

.narrow {
	width: 308px;
}

.table_title.wide {
	width: 679px;
}

table.wide {
	width: 711px;
}

.table_title, .title_block {
	background: #f2f2f2;
	padding: 15px 15px 0;
	margin-right: 0;
	float: left;
	height: 44px;
	border: 1px solid #e1e1e1;
}

table#instances  {
	width: 711px;
	color: #777;
}

table#instances td.name{
	max-width: 123px;
	overflow: hidden;
}

table#instances td.name:hover {
	overflow: auto;	
	z-index: 999;
}

table ul {
	margin-left: 20px;
}
table ul li {
	list-style: disc;
	font-size: 14px;
}

.table_title h3, .title_block h3 {
	font-weight: normal;
	font-size: 28px;
}

.table_title .search {
	float: right;
	margin-top: -9px;
	margin-right: -15px;
	border: 0;
}

.table_title .search fieldset {
	width: 196px;
	height: 35px;
}

table th {
	background: #e6e6e6 url(../images/misc_bg.png) top left repeat-x;
	padding: 10px;
	font-weight: normal;
	color: #fff;
	border-right: 1px solid #c6c6c6;
	text-shadow: #b2b2b2 1px 1px 0;
	text-align: left;
    white-space:nowrap;
}

table td {
	border: 1px solid #e8e8e8;
	padding: 10px;
}

tr.odd {
	background: #fff;
}


tr, .good, .bad, .medium {
    -webkit-transition: background 0.2s;
    -moz-transition: background 0.2s;
	-o-transition: background 0.2s;
	transition: background 0.2s;
}
tr.odd:hover, tr.even:hover {
	background: #eee;
}

tr.terminated {
	background: #ddd;
}

table tr.odd.good td {
	border: 1px solid #92fd75;
}

table tr.even.good td {
	border: 1px solid #88f06d;
}

table tr.odd.bad td {
	border: 1px solid #ffb7b8;
}

table tr.even.bad td {
	border: 1px solid #fba7a9;
}

table tr.odd.medium td {
	border: 1px solid #f8e400;
}

table tr.even.medium td {
	border: 1px solid #f0dd00;
}


tr.even {
	background: #f5f5f5;
}

td#actions ul {
	margin: 0;
}
td#actions li {
	margin-bottom: 6px;
	list-style: disc;
	font-size: 11px;
	margin-left: 15px;
	margin-right: 8px;
}

td#actions li a {
  font-size: 11px !important;
}

td#actions form input[type="submit"] {
    font-size: 11px;
    border: 0px;
    background: transparent;
    color: #3fb9d3;
    cursor: pointer;
    padding: 0px;
    margin: 0px;
}

td#actions input[type="submit"]:hover {
    text-decoration: underline;
}

 .terminate {
	cursor: pointer;
  background-color: transparent;
	text-decoration: none;
	border: none;
	text-align: left;
	color: #3fb9d3;
	padding: 0;
	margin: 0;
}

.terminate:hover {
  text-decoration: underline;
}

p#copy {
	font-size: 12px;
	margin-bottom: 50px;
	color: #bcbcbc;
	text-align: center;
}

.dash_block {
	width: 340px;
	float: left;
	margin-right: 23px;
	margin-bottom: 25px;
}

.dash_block.wide.form {
	background: url(../images/dashblock_bg.png) top left repeat-y;
}

.dash_block.wide {
	width: 705px;
}


.wide .title_block {
	width: 674px;
}

.block_content {
	padding: 25px;
	float: left;
}

.dash_block form .errorlist {
	color: #ff5c5f;
	font-size: 11px;
}

.dash_block label {
	clear: both;
}
/* ... */

